--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "my.example.fingerboardcheck"
+        applicationId "io.github.yoheikikuta.fingerboardcheck"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
