--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="my.example.fingerboardcheck">
+          package="io.github.yoheikikuta.fingerboardcheck">
 
     <application
             android:allowBackup="true"
@@ -9,7 +9,7 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="io.github.yoheikikuta.fingerboardcheck.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
